--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Agente_Kowalskye",
 	"short_name": "Agente_Kowalskye",
-	"description": "",
+	"description": "Agente Kowalskye",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "landscape",
